@@ -1,11 +1,12 @@
 require 'httpclient'
+require 'grackle'
+
 module SimpleTwitterPost
 
   class InvalidMessageError < StandardError
   end
 
   class Base
-
     # Want to wrap http-post calls asynchronous with spawn.
     # but if there is no spawn, use a simple fallback.
     if defined?(Spawn)
@@ -16,6 +17,12 @@ module SimpleTwitterPost
       end
     end
 
+    # :logger => instance of some logger class
+    # assuming logger can do logger.error
+    def initialize(options = {})
+      @logger = options[:logger]
+    end
+
     def config
       return @config unless @config.blank?
   
@@ -23,14 +30,14 @@ module SimpleTwitterPost
       @config = HashWithIndifferentAccess.new(@config)
     end
   
-    def twitter_http_client
-      return @twitter_http_client unless @twitter_http_client.blank?
-  
-      @twitter_http_client = ::HTTPClient.new
-      @twitter_http_client.connect_timeout = 50 # seconds; generous timeouts
-      @twitter_http_client.receive_timeout = 50
-      @twitter_http_client.set_auth('https://api.twitter.com', self.config[:user_id], self.config[:password])
-      @twitter_http_client
+    def grackle_client
+      return @grackle_client unless @grackle_client.blank?
+      # HashWithIndifferentAccess is not good enough for "merge"
+      @grackle_client =  Grackle::Client.new(:auth=> {:type=>:oauth,
+                                                      :consumer_key => config[:consumer_key],
+                                                      :consumer_secret => config[:consumer_secret],
+                                                      :token => config[:token],
+                                                      :token_secret => config[:token_secret]})
     end
   
     def tinyurl_http_client
@@ -48,12 +55,42 @@ module SimpleTwitterPost
 
       shortener = SimpleTwitterPost::StringShortener.new(*args)
       spawn do
-        unless shortener.url.nil?
-          # Replace the URL by a tinyurl (until this is made configurable)
-          shortener.url = self.tinyurl_http_client.post("http://tinyurl.com/api-create.php", :url => shortener.url).content
+        begin
+          unless shortener.url.nil?
+            # Replace the URL by a tinyurl (until this is made configurable)
+            # TODO : check return value
+            tinyurl_response = self.tinyurl_http_client.post("http://tinyurl.com/api-create.php", :url => shortener.url)
+            if tinyurl_response.header.status_code  == 200 
+              shortener.url = tinyurl_response.content 
+            else
+              shortener.url = 'URL unavailable'
+              log_error { "#{self.class}: tinyurl problem / #{tinyurl_response.inspect}" }
+            end
+          end
+
+          begin
+            result = self.grackle_client.statuses.update! :status => shortener.shortened
+            log_info { "Udated twitter status http://twitter.com/#{result.user.screen_name}/statuses/#{result.id}" }
+            result
+          rescue Grackle::TwitterError => e
+            log_error { "Grackle::TwitterError #{e} while updating twitter status for #{args.inspect}" }
+          end
+        rescue Exception => e
+          log_error { "#{self.class}: Exception #{e} while updating twitter status for #{args.inspect}" }
         end
-        self.twitter_http_client.post('https://api.twitter.com/1/statuses/update.json', :status => shortener.shortened)
       end
+    end
+
+    protected
+    # Using yield to avoid evaluating when there is no logger
+    def log_error(&block)
+      return if @logger.nil?
+      @logger.error(yield)
+    end
+
+    def log_info
+      return if @logger.nil?
+      @logger.info(yield)
     end
   end
 end
