@@ -1,3 +1,10 @@
+v.02 2010/08/11
+
+ * Switch from "Basic Auth" to "OAuth" (grackle gem)
+ * Provide for logging, in particular errors when connecting to
+   tinyurl / twitter 
+ * tinyurl shortening service errors result in "address unavailable" URLs
+
 v.01 2010/07/30
 
 Initial Version
